tests/baselines/reference/constDeclarationShadowedByVarDeclaration.errors.txt
tests/cases/compiler/constDeclarationShadowedByVarDeclaration.ts(7,9): error TS2451: Cannot redeclare block-scoped variable 'x'.
tests/cases/compiler/constDeclarationShadowedByVarDeclaration.ts(15,13): error TS2451: Cannot redeclare block-scoped variable 'y'.
tests/cases/compiler/constDeclarationShadowedByVarDeclaration.ts(22,7): error TS2451: Cannot redeclare block-scoped variable 'z'.


==== tests/cases/compiler/constDeclarationShadowedByVarDeclaration.ts (3 errors) ====
    
    // Error as declaration of var would cause a write to the const value
    var x = 0;
    {
        const x = 0;
    
        var x = 0;
            ~
!!! error TS2451: Cannot redeclare block-scoped variable 'x'.
    }
    
    
    var y = 0;
    {
        const y = 0;
        {
            var y = 0;
                ~
!!! error TS2451: Cannot redeclare block-scoped variable 'y'.
        }
    }
    
    
    {
      const z = 0;
      var z = 0
          ~
!!! error TS2451: Cannot redeclare block-scoped variable 'z'.
    }